fixed tims problem

--- a/app/globals.css
+++ b/app/globals.css
@@ -648,6 +648,10 @@
           .contact-content {
             flex-direction: column;
           }
+
+          .logo{
+            width: 300px;
+          }
         }
 
         @media (max-width: 480px) {
